# AmiiboTap

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml  linux-cmake.yml  macos-cmake.yml
lib/amiitool/: CMakeLists.txt  amiitool.c
lib/libnfc/: CMakeLists.txt
lib/libnfc/win32/: config.h
src/: PN532Tool.cpp  PN532Tool.h  amibo-tap-qt.cpp  amibo-tap.cpp  amiibo-tap.cpp  amiibo.cpp  amiibo.h  amiibo.hpp  amiibo_static.h  amiibo_static.hpp  amiitool.cpp  amiitool.h  amiitool.hpp  binarybuffer.cpp  binarybuffer.h  exception.h  exception.hpp  logging.cpp  logging.h  logging.hpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nfchandler.cpp  nfchandler.h  nfchandler.hpp  pimiibo.cpp
src/QApp/: amibo-tap-qt.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
test/: 3e45.hpp  README.txt  uint8_t.cpp
